@startuml
'https://plantuml.com/class-diagram

!include Class-jp.crestmuse.cmx.puml

hide empty members

class processing.core.PApplet {
    draw()
}

package "kthrlab" {
'    package "pianoroll" #orange {
'        interface MultichannelPianoRoll {
'            CMXController cmx // need cmx?
'        }
'        PianoRoll <|.. MultichannelPianoRoll
'
'        class MultichannelPianoRollPApplet {
'        }
'        MultichannelPianoRoll <|.. MultichannelPianoRollPApplet
'        PApplet <|-- MultichannelPianoRollPApplet
'    }
    package "jamsketch" {
        package "view" {
            class SimplePianoRollScalable #orange {
                dataModel: PianoRoll.DataModel?
            }
            CMXApplet <|-- SimplePianoRollScalable
            class SimplePianoRollMultiChannel #orange {
            }
            SimplePianoRollScalable <|-- SimplePianoRollMultiChannel

            class JamSketch #orange {
            }
            SimplePianoRollMultiChannel <|-- JamSketch
        }
        package "music" {
            package "data" {
                class MusicData {
                    scc: SCC
                    // Data converted from input MIDI file to SCCXML format

                    <color:red>channelCurveSet: Set<Pair<Int, MutableList<Int?>>></color>
                    // XY coordinates of the curve by channel

                    filename: Input file name
                    size: Int
                    initial_blank_measures: Int
                    beats_per_measure: Int
                    num_of_measures: Int
                    repeat_times: Int
                    division: Int
                    channel_gen: Int
                }
                class ObservableMusicData #orange {
                    onChange: ()
                }
                MusicData <|-- ObservableMusicData
'                    class MultichannelMusicData #orange {
'                        channelCurveSet: Set<Pair<Int, MutableList<Int?>>>
''                        curves: MutableList<Pair MutableList<Int?>>
'                    }
'                    MusicData <|-- MultichannelMusicData
                class PianoRollDataModelMultiChannel #orange {
                }
                DataModel <|.. PianoRollDataModelMultiChannel
            }
        }
    }
}

MusicData *-- SCC
SimplePianoRollScalable *-- DataModel

@enduml